fix(hero): adjust letter-spacing and font size for title and description to enhance readability

--- a/components/sections/Hero/index.scss
+++ b/components/sections/Hero/index.scss
@@ -220,7 +220,7 @@
 
     &__title {
       font-size: 18vw;
-      letter-spacing: 3vw;
+      letter-spacing: 4vw;
       font-weight: bolder;
       max-width: 90vw;
       text-align: center;
@@ -228,8 +228,8 @@
     }
 
     &__description {
-      margin-top: 1rem;
-      font-size: 4vw;
+      margin-top: 0.5rem;
+      font-size: 4.5vw;
       text-align: center;
       max-width: 90vw;
     }
